# custom_robot

./: CMakeLists.txt  README.md  package.xml
config/: position_controllers.yaml
controllers/: arm_controllers.yaml  gripper_controller.yaml  position_controllers.yaml
launch/: pr_robot.launch
rviz/: config.rviz
scripts/: contact_msg_counter.py
urdf/: pr_robot.urdf.xacro  robotiq_model.xacro  transmission.urdf.xacro  transmission.xacro
worlds/: box.world
